cabal-version:       2.2
name:                ihp-graphql
version:             1.5.0
synopsis:            GraphQL support for IHP
description:         GraphQL support for IHP
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp/issues
copyright:           (c) digitally induced GmbH
category:            Web, IHP
build-type:          Simple
extra-source-files:  README.md, changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

common shared-properties
    default-language: GHC2021
    build-depends:
          base >= 4.17.0 && < 4.22
          , ihp
          , ihp-postgres-parser
          , unordered-containers
          , text
          , attoparsec
          , postgresql-simple
          , aeson
          , scientific
          , countable-inflections
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , RecordWildCards
        , DefaultSignatures
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , TemplateHaskell
        , OverloadedRecordDot
    ghc-options: -Werror=incomplete-patterns -Werror=unused-imports -Werror=missing-fields

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.GraphQL.Compiler
        , IHP.GraphQL.JSON
        , IHP.GraphQL.Parser
        , IHP.GraphQL.SchemaCompiler
        , IHP.GraphQL.ToText
        , IHP.GraphQL.Types

test-suite spec
    import: shared-properties
    type: exitcode-stdio-1.0
    other-modules:
        Test.GraphQL.CompilerSpec
        , Test.GraphQL.ParserSpec
        , Test.GraphQL.SchemaCompilerSpec
    hs-source-dirs: .
    main-is: Test/Spec.hs
    build-depends:
        hspec
        , megaparsec
        , bytestring
        , ihp-graphql