cabal-version:       2.2
name:                ihp-hspec
version:             1.4.0
synopsis:            Test helpers for IHP apps
description:         Provides the withIHPApp function for hspec tests
license:             MIT
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            Testing
build-type:          Simple
data-dir:            data
data-files:          IHPSchema.sql

library
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        DuplicateRecordFields
        DisambiguateRecordFields
        TypeApplications
        TemplateHaskell
        QuasiQuotes
        PackageImports
        ScopedTypeVariables
        BlockArguments
        OverloadedStrings
        ImplicitParams
        RecordWildCards
    build-depends: base >= 4.17.0 && < 4.22, ihp, wai, process, text, vault, uuid, postgresql-simple
    hs-source-dirs: .
    exposed-modules: IHP.Hspec

test-suite tests
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        DuplicateRecordFields
        DisambiguateRecordFields
        TypeApplications
        TemplateHaskell
        QuasiQuotes
        PackageImports
        ScopedTypeVariables
        BlockArguments
        OverloadedStrings
        ImplicitParams
        RecordWildCards
    type: exitcode-stdio-1.0
    main-is: Test/Main.hs
    hs-source-dirs: .
    build-depends: base >= 4.17.0 && < 4.22, ihp, ihp-hspec, wai, hspec, http-types, process, text, vault, uuid, postgresql-simple
    other-modules: WithIHPAppSpec