cabal-version:       2.2
name:                ihp-hsx
version:             1.3.0
synopsis:            JSX-like but for Haskell
description:         JSX-like templating syntax for Haskell
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            HTML
build-type:          Simple
extra-source-files: README.md, changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

library
    default-language: Haskell2010
    build-depends:
          base >= 4.17.0 && < 4.20
        , blaze-html >= 0.9.1 && < 0.10
        , bytestring >= 0.11.3 && < 0.13
        , template-haskell >= 2.19.0 && < 2.22
        , text >= 2.0.1 && < 2.2
        , containers >= 0.6.6 && < 0.7
        , blaze-markup >= 0.8.2 && < 0.9
        , ghc >= 9.4.4 && < 9.9
        , megaparsec >= 9.2.2 && < 9.7
        , string-conversions >= 0.4.0 && < 0.5
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
        , OverloadedRecordDot
    ghc-options:
        -fstatic-argument-transformation
        -funbox-strict-fields
        -haddock
        -Wredundant-constraints
        -Wunused-imports
        -Wunused-foralls
        -Wmissing-fields
        -Winaccessible-code
        -Wmissed-specialisations
        -Wall-missed-specialisations
        -fspecialise-aggressively
        -funfolding-use-threshold=120
        -fdicts-strict
        -fexpose-all-unfoldings
        -optc-O3
    hs-source-dirs: .
    exposed-modules:
        IHP.HSX.Parser
        , IHP.HSX.QQ
        , IHP.HSX.ToHtml
        , IHP.HSX.ConvertibleStrings
        , IHP.HSX.HaskellParser
        , IHP.HSX.HsExpToTH
        , IHP.HSX.Attribute