cabal-version:       2.2
name:                ihp-hsx
version:             1.4.0
synopsis:            JSX-like but for Haskell
description:         JSX-like templating syntax for Haskell
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            HTML
build-type:          Simple
extra-source-files: README.md, changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

library
    default-language: Haskell2010
    build-depends:
          base >= 4.17.0 && < 4.20
        , blaze-html
        , bytestring
        , template-haskell >= 2.19.0 && < 2.22
        , text
        , containers
        , blaze-markup
        , ghc >= 9.4.4 && < 9.9
        , megaparsec
        , string-conversions
        , unordered-containers
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
        , OverloadedRecordDot
    ghc-options:
        -fstatic-argument-transformation
        -funbox-strict-fields
        -haddock
        -Wredundant-constraints
        -Wunused-imports
        -Wunused-foralls
        -Wmissing-fields
        -Winaccessible-code
        -Wmissed-specialisations
        -Wall-missed-specialisations
        -fspecialise-aggressively
        -funfolding-use-threshold=120
        -fdicts-strict
        -fexpose-all-unfoldings
        -optc-O3
    hs-source-dirs: .
    exposed-modules:
        IHP.HSX.Parser
        , IHP.HSX.QQ
        , IHP.HSX.ToHtml
        , IHP.HSX.ConvertibleStrings
        , IHP.HSX.HaskellParser
        , IHP.HSX.HsExpToTH
        , IHP.HSX.Attribute

test-suite ihp-hsx-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Test
    main-is:             Main.hs
    other-modules:
        IHP.HSX.ParserSpec
        IHP.HSX.QQSpec
    default-language:    Haskell2010
    build-depends:
          base >= 4.17.0 && < 4.20
        , ihp-hsx
        , hspec
        , text
        , bytestring
        , containers
        , blaze-markup
        , megaparsec
        , template-haskell
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
        , OverloadedRecordDot