cabal-version:       2.2
name:                ihp-hsx
version:             1.5.0
synopsis:            JSX-like but for Haskell
description:         JSX-like templating syntax for Haskell
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            HTML
build-type:          Simple
extra-source-files: README.md, changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

common common-extensions
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , Rank2Types
        , NamedFieldPuns
        , TypeSynonymInstances
        , FlexibleInstances
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , FlexibleContexts
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , ScopedTypeVariables
        , RecordWildCards
        , TypeApplications
        , DataKinds
        , InstanceSigs
        , DeriveGeneric
        , MultiParamTypeClasses
        , TypeOperators
        , DeriveDataTypeable
        , DefaultSignatures
        , BangPatterns
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , StandaloneDeriving
        , TemplateHaskell
        , OverloadedRecordDot

common common-flags
    ghc-options:
        -fstatic-argument-transformation
        -funbox-strict-fields
        -haddock
        -Wredundant-constraints
        -Wunused-imports
        -Wunused-foralls
        -Wmissing-fields
        -Winaccessible-code
        -Wmissed-specialisations
        -Wall-missed-specialisations
        -fspecialise-aggressively
        -funfolding-use-threshold=120
        -fdicts-strict
        -fexpose-all-unfoldings
        -optc-O3

common common-depends
    build-depends:
          base >= 4.17.0 && < 4.22
        , bytestring
        , template-haskell >= 2.19.0 && < 2.24
        , text
        , containers
        , megaparsec
        , string-conversions
        , unordered-containers

library ihp-hsx-parser
    import: common-extensions, common-flags, common-depends
    default-language: GHC2021
    build-depends:
        ghc >= 9.4.4 && < 9.13
    hs-source-dirs: parser
    exposed-modules:
        IHP.HSX.Parser
        , IHP.HSX.HaskellParser
        , IHP.HSX.HsExpToTH

library
    import: common-extensions, common-flags, common-depends
    build-depends:
        ihp-hsx-parser
        , blaze-html
        , blaze-markup
    default-language: GHC2021
    hs-source-dirs: blaze
    exposed-modules:
        IHP.HSX.QQ
        , IHP.HSX.ToHtml
        , IHP.HSX.ConvertibleStrings
        , IHP.HSX.Attribute
    reexported-modules:
        IHP.HSX.Parser
        , IHP.HSX.HaskellParser
        , IHP.HSX.HsExpToTH

library ihp-hsx-lucid2
    import: common-extensions, common-flags, common-depends
    build-depends:
        ihp-hsx-parser
        , lucid2
        , transformers
    default-language: GHC2021
    hs-source-dirs: lucid2
    exposed-modules:
        IHP.HSX.Lucid2.QQ
        , IHP.HSX.Lucid2.Attribute
        , IHP.HSX.Lucid2.ToHtml
    reexported-modules:
        IHP.HSX.Parser
        , IHP.HSX.HaskellParser
        , IHP.HSX.HsExpToTH

test-suite ihp-hsx-tests
    import: common-extensions, common-flags, common-depends
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Test
    main-is:             Main.hs
    other-modules:
        IHP.HSX.ParserSpec
        IHP.HSX.QQSpec
        IHP.HSX.CustomHsxCases
    default-language:    GHC2021
    build-depends:
        , ihp-hsx
        , ihp-hsx-lucid2
        , hspec
        , blaze-markup
        , megaparsec
        , template-haskell
        , lucid2
        , mtl
