cabal-version:       2.2
name:                ihp-ide
version:             1.4.0
synopsis:            Dev tools for IHP
description:         The Integrated Haskell Platform is a full stack framework focused on rapid application development while striving for robust code quality.
license:             MIT
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp/issues
copyright:           (c) digitally induced GmbH
category:            Web, IHP
stability:           Stable
tested-with:         GHC == 9.8.4
build-type:          Simple
data-dir: data
data-files:
      lib/IHP/Makefile.dist
    , lib/IHP/.hie-bios
    , lib/IHP/applicationGhciConfig
    , IHPSchema.sql
    , static/IDE/*.css
    , static/IDE/*.js
    , static/IDE/fonts/inter/*.eot
    , static/IDE/fonts/inter/*.svg
    , static/IDE/fonts/inter/*.ttf
    , static/IDE/fonts/inter/*.woff
    , static/IDE/fonts/inter/*.woff2

Flag FastBuild
    Default: False
    Description: Disables all optimisations, leads to faster build time

common shared-properties
    default-language: GHC2021
    build-depends:
            base >= 4.17.0 && < 4.22
            , classy-prelude
            , mono-traversable
            , transformers
            , directory
            , string-conversions
            , warp
            , wai
            , blaze-html
            , blaze-markup
            , wai-extra
            , inflections
            , text
            , postgresql-simple
            , wai-app-static
            , wai-util
            , bytestring
            , network-uri
            , uri-encode
            , aeson
            , wai-session
            , wai-session-clientsession
            , clientsession
            , vault
            , data-default
            , uuid
            , time
            , attoparsec
            , interpolate
            , split
            , containers
            , process
            , basic-prelude
            , megaparsec
            , async
            , network
            , unliftio
            , unix
            , fsnotify >= 0.4.3.0
            , websockets
            , wai-websockets
            , wreq
            , parser-combinators
            , neat-interpolation
            , unagi-chan
            , with-utf8
            , ihp-hsx
            -- Used for 'Control.Debounce' in 'IHP.IDE.FileWatcher'
            , auto-update
            , base16-bytestring
            , cryptohash
            , http-types
            , safe-exceptions
            , countable-inflections
            , ihp-migrate
    default-extensions:
        OverloadedStrings
        , NoImplicitPrelude
        , ImplicitParams
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , OverloadedLabels
        , DataKinds
        , QuasiQuotes
        , TypeFamilies
        , PackageImports
        , RecordWildCards
        , DefaultSignatures
        , FunctionalDependencies
        , PartialTypeSignatures
        , BlockArguments
        , LambdaCase
        , TemplateHaskell
        , OverloadedRecordDot
        , DeepSubsumption
    if flag(FastBuild)
        ghc-options:
            -threaded
            +RTS -A256m -n4m -H512m -qg -N -RTS

            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations
            -Wno-ambiguous-fields
    else
        ghc-options:
            -fstatic-argument-transformation
            -funbox-strict-fields
            -haddock
            -threaded

            -Wunused-imports
            -Wunused-foralls
            -Wmissing-fields
            -Winaccessible-code
            -Wmissed-specialisations
            -Wall-missed-specialisations
            -fspecialise-aggressively
            -Wno-ambiguous-fields

library
    import: shared-properties
    hs-source-dirs: .
    build-depends: ihp
    exposed-modules:
          IHP.IDE.SchemaDesigner.Controller.Columns
        , IHP.IDE.SchemaDesigner.Controller.EnumValues
        , IHP.IDE.SchemaDesigner.Controller.Enums
        , IHP.IDE.SchemaDesigner.Controller.Helper
        , IHP.IDE.SchemaDesigner.Controller.Schema
        , IHP.IDE.SchemaDesigner.Controller.Tables
        , IHP.IDE.SchemaDesigner.Controller.Validation
        , IHP.IDE.SchemaDesigner.Controller.Policies
        , IHP.IDE.SchemaDesigner.Controller.Migrations
        , IHP.IDE.SchemaDesigner.Controller.Indexes
        , IHP.IDE.SchemaDesigner.View.Columns.Edit
        , IHP.IDE.SchemaDesigner.View.Columns.EditForeignKey
        , IHP.IDE.SchemaDesigner.View.Columns.New
        , IHP.IDE.SchemaDesigner.View.Columns.NewForeignKey
        , IHP.IDE.SchemaDesigner.View.EnumValues.Edit
        , IHP.IDE.SchemaDesigner.View.EnumValues.New
        , IHP.IDE.SchemaDesigner.View.Enums.Edit
        , IHP.IDE.SchemaDesigner.View.Enums.New
        , IHP.IDE.SchemaDesigner.View.Enums.Show
        , IHP.IDE.SchemaDesigner.View.Layout
        , IHP.IDE.SchemaDesigner.View.Schema.Code
        , IHP.IDE.SchemaDesigner.View.Schema.Error
        , IHP.IDE.SchemaDesigner.View.Schema.GeneratedCode
        , IHP.IDE.SchemaDesigner.View.Schema.SchemaUpdateFailed
        , IHP.IDE.SchemaDesigner.View.Tables.Edit
        , IHP.IDE.SchemaDesigner.View.Tables.Index
        , IHP.IDE.SchemaDesigner.View.Tables.New
        , IHP.IDE.SchemaDesigner.View.Tables.Show
        , IHP.IDE.SchemaDesigner.View.Policies.New
        , IHP.IDE.SchemaDesigner.View.Policies.Edit
        , IHP.IDE.SchemaDesigner.View.Migrations.Edit
        , IHP.IDE.SchemaDesigner.View.Migrations.Index
        , IHP.IDE.SchemaDesigner.View.Migrations.New
        , IHP.IDE.SchemaDesigner.View.Indexes.Edit
        , IHP.IDE.SchemaDesigner.SchemaOperations
        , IHP.IDE.Data.Controller
        , IHP.IDE.Data.View.EditRow
        , IHP.IDE.Data.View.EditValue
        , IHP.IDE.Data.View.Layout
        , IHP.IDE.Data.View.NewRow
        , IHP.IDE.Data.View.ShowDatabase
        , IHP.IDE.Data.View.ShowQuery
        , IHP.IDE.Data.View.ShowTableRows
        , IHP.IDE.Data.View.ShowForeignKeyHoverCard
        , IHP.IDE.CodeGen.View.Generators
        , IHP.IDE.CodeGen.View.NewAction
        , IHP.IDE.CodeGen.View.NewApplication
        , IHP.IDE.CodeGen.View.NewController
        , IHP.IDE.CodeGen.View.NewScript
        , IHP.IDE.CodeGen.View.NewView
        , IHP.IDE.CodeGen.View.NewMigration
        , IHP.IDE.Logs.View.Logs
        , IHP.IDE.Logs.Controller
        , IHP.IDE.CodeGen.View.NewMail
        , IHP.IDE.ToolServer
        , IHP.IDE.ToolServer.Helper.Controller
        , IHP.IDE.ToolServer.Helper.View
        , IHP.IDE.ToolServer.Layout
        , IHP.IDE.ToolServer.Routes
        , IHP.IDE.ToolServer.Types
        , IHP.IDE.Types
        , IHP.IDE.CodeGen.ActionGenerator
        , IHP.IDE.CodeGen.ApplicationGenerator
        , IHP.IDE.CodeGen.Controller
        , IHP.IDE.CodeGen.ControllerGenerator
        , IHP.IDE.CodeGen.ScriptGenerator
        , IHP.IDE.CodeGen.Types
        , IHP.IDE.CodeGen.ViewGenerator
        , IHP.IDE.CodeGen.JobGenerator
        , IHP.IDE.CodeGen.View.NewJob
        , IHP.IDE.CodeGen.MailGenerator
        , IHP.IDE.CodeGen.MigrationGenerator
        , IHP.IDE.LiveReloadNotificationServer
        , IHP.IDE.FileWatcher
        , IHP.IDE.PortConfig
        , IHP.IDE.Postgres
        , IHP.IDE.StatusServer
        , IHP.SchemaCompiler
        , IHP.IDE.SchemaDesigner.Compiler
        , IHP.IDE.SchemaDesigner.Parser
        , IHP.IDE.SchemaDesigner.Types
        , IHP.Telemetry
        , IHP.Version
    autogen-modules: Paths_ihp_ide
    other-modules: Paths_ihp_ide

executable RunDevServer
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/IDE/DevServer.hs
    if flag(FastBuild)
        ghc-options:
            -threaded
            +RTS -A512m -n4m -H512m -G3 -qg -N -RTS
            -Wno-ambiguous-fields
    else
        ghc-options:
            -fconstraint-solver-iterations=100
            -fexpose-all-unfoldings
            -flate-dmd-anal
            -flate-specialise
            -fmax-worker-args=15
            -fspec-constr-keen
            -fspecialise-aggressively
            -fstatic-argument-transformation
            -funbox-strict-fields
            -funfolding-use-threshold=160
            -fdicts-strict
            -threaded
            -with-rtsopts=-A512m
            -with-rtsopts=-N
            -with-rtsopts=-n4m
            -with-rtsopts=--nonmoving-gc
            +RTS -A256m -n4m -H512m -G3 -qg -N -RTS
            -Wno-ambiguous-fields
    autogen-modules: Paths_ihp_ide
    other-modules: Paths_ihp_ide

executable new-application
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/NewApplication.hs

executable build-generated-code
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/BuildGeneratedCode.hs

executable new-controller
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/NewController.hs

executable delete-controller
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/DeleteController.hs

executable new-script
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/NewScript.hs

executable new-migration
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/NewMigration.hs

executable hash-password
    import: shared-properties
    build-depends: ihp, ihp-ide
    hs-source-dirs: exe
    main-is: IHP/CLI/HashPassword.hs

executable new-session-secret
    default-language: Haskell2010
    default-extensions: BlockArguments
    build-depends: base >= 4.17.0 && < 4.22, clientsession, bytestring, with-utf8, base64-bytestring
    hs-source-dirs: exe
    main-is: IHP/CLI/NewSessionSecret.hs
    ghc-options: -fsplit-sections

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp

test-suite tests
    import: shared-properties
    type: exitcode-stdio-1.0
    main-is: Test/Main.hs
    hs-source-dirs: .
    build-depends: ihp, hspec
    other-modules:
        Test.IDE.SchemaDesigner.CompilerSpec
        Test.IDE.SchemaDesigner.ParserSpec
        Test.IDE.SchemaDesigner.Controller.EnumValuesSpec
        Test.IDE.SchemaDesigner.Controller.HelperSpec
        Test.IDE.SchemaDesigner.Controller.ValidationSpec
        Test.IDE.CodeGeneration.ControllerGenerator
        Test.IDE.CodeGeneration.ViewGenerator
        Test.IDE.CodeGeneration.MailGenerator
        Test.IDE.CodeGeneration.JobGenerator
        Test.IDE.SchemaDesigner.SchemaOperationsSpec
        Test.IDE.CodeGeneration.MigrationGenerator
        Test.SchemaCompilerSpec