cabal-version:       2.2
name:                ihp-migrate
version:             1.4.0
synopsis:            Provides the IHP migrate binary
description:         Postgres DB migrations for IHP applications
license:             MIT
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            Database
build-type:          Simple


common ihp-std
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        DuplicateRecordFields
        DisambiguateRecordFields
        TypeApplications
        TemplateHaskell
        QuasiQuotes
        PackageImports
        ScopedTypeVariables
        BlockArguments
        OverloadedStrings
        ImplicitParams

library
    import: ihp-std
    build-depends: base >= 4.17.0 && < 4.22, ihp, with-utf8, text, directory
    hs-source-dirs: .
    exposed-modules: IHP.SchemaMigration

executable migrate
    import: ihp-std
    build-depends: base >= 4.17.0 && < 4.22, ihp, with-utf8, text, directory, ihp-migrate
    hs-source-dirs: .
    main-is: Migrate.hs

test-suite tests
    import: ihp-std
    type: exitcode-stdio-1.0
    main-is: SchemaMigrationSpec.hs
    build-depends: base >= 4.17.0 && < 4.22, hspec, ihp, with-utf8, directory, ihp-migrate, filepath, temporary
    hs-source-dirs: Test