cabal-version:       2.2
name:                ihp-migrate
version:             1.4.0
synopsis:            Provides the IHP migrate binary
description:         Postgres DB migrations for IHP applications
license:             MIT
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            Database
build-type:          Simple


common ihp-std
    default-language: GHC2021
    default-extensions:
        OverloadedLabels
        OverloadedRecordDot
        DuplicateRecordFields
        DisambiguateRecordFields
        TypeApplications
        PackageImports
        ScopedTypeVariables
        BlockArguments
        OverloadedStrings
        ImplicitParams
    ghc-options: -Werror=incomplete-patterns -Werror=unused-imports -Werror=missing-fields

library
    import: ihp-std
    build-depends: base >= 4.17.0 && < 4.22, with-utf8, text, directory >= 1.3.8.0, filepath >= 1.5, string-conversions, hasql, hasql-transaction
    hs-source-dirs: .
    exposed-modules: IHP.SchemaMigration

executable migrate
    import: ihp-std
    build-depends: base >= 4.17.0 && < 4.22, with-utf8, text, directory >= 1.3.8.0, filepath >= 1.5, ihp-migrate, string-conversions, hasql, hasql-transaction
    hs-source-dirs: .
    main-is: Migrate.hs
    ghc-options: -threaded

test-suite tests
    import: ihp-std
    type: exitcode-stdio-1.0
    main-is: SchemaMigrationSpec.hs
    build-depends: base >= 4.17.0 && < 4.22, hspec, with-utf8, directory >= 1.3.8.0, ihp-migrate, filepath >= 1.5, temporary
    hs-source-dirs: Test
