cabal-version:       2.2
name:                ihp-modal
version:             1.4.0
synopsis:            Modal dialog support for IHP applications
description:         Provides modal dialog functionality with Bootstrap-compatible markup.
                     Can be used with the full IHP framework or standalone with ihp-context and ihp-hsx.
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          hello@digitallyinduced.com
homepage:            https://ihp.digitallyinduced.com/
bug-reports:         https://github.com/digitallyinduced/ihp/issues
copyright:           (c) digitally induced GmbH
category:            Web, IHP

common shared-properties
    default-language: GHC2021
    build-depends:
          base >= 4.17.0 && < 4.22
        , ihp-context
        , ihp-hsx
        , text
        , blaze-html
        , vault
        , wai
    default-extensions:
        OverloadedStrings
        , ImplicitParams
        , DataKinds
        , RecordWildCards
        , QuasiQuotes
    ghc-options: -Werror=incomplete-patterns

library
    import: shared-properties
    hs-source-dirs: .
    exposed-modules:
        IHP.Modal.Types
        , IHP.Modal.ControllerFunctions
        , IHP.Modal.ViewFunctions
