cabal-version:       2.2
name:                ihp-openai
version:             1.3.0
synopsis:            Call GPT4 from your Haskell apps
description:         Streaming functions to access the OpenAI APIs, with Retry and Function Calling
license:             MIT
license-file:        LICENSE
author:              digitally induced GmbH
maintainer:          support@digitallyinduced.com
bug-reports:         https://github.com/digitallyinduced/ihp/issues
category:            AI
build-type:          Simple
extra-source-files: README.md, changelog.md

source-repository head
    type:     git
    location: https://github.com/digitallyinduced/ihp.git

library
    default-language: Haskell2010
    build-depends:
          base >= 4.17.0 && < 4.20
        , text
        , http-streams
        , retry
        , io-streams
        , bytestring
        , aeson
        , HsOpenSSL
    default-extensions:
        OverloadedStrings
          FlexibleContexts
        , ScopedTypeVariables
        , NamedFieldPuns
        , BangPatterns
        , BlockArguments
        , OverloadedRecordDot
        , BlockArguments
        , DisambiguateRecordFields
        , DuplicateRecordFields
    ghc-options:
        -fstatic-argument-transformation
        -funbox-strict-fields
        -haddock
        -Wredundant-constraints
        -Wunused-imports
        -Wunused-foralls
        -Wmissing-fields
        -Winaccessible-code
        -Wmissed-specialisations
        -fexpose-all-unfoldings
    hs-source-dirs: .
    exposed-modules:
        IHP.OpenAI

test-suite tests
    type: exitcode-stdio-1.0
    main-is: IHP/OpenAISpec.hs
    build-depends:
        base >= 4.17.0 && < 4.20
        , hspec
        , neat-interpolation
        , ihp-openai
        , text
        , aeson
    hs-source-dirs: Test
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
          FlexibleContexts
        , ScopedTypeVariables
        , NamedFieldPuns
        , BangPatterns
        , BlockArguments
        , OverloadedRecordDot
        , BlockArguments
        , DisambiguateRecordFields
        , DuplicateRecordFields
        , QuasiQuotes